--- a/views/admin/notes/all-notes.ejs
+++ b/views/admin/notes/all-notes.ejs
@@ -1,5 +1,6 @@
 <%- include('../../shared/includes/head', { pageTitle: 'All Notes' }) %>
 <link rel="stylesheet" href="/styles/notes.css">
+<script src="/scripts/note-maangement.js" defer></script>
 </head>
 <body>
   <%- include('../../shared/includes/header') %>
