--- a/views/admin/notes/new-notes.ejs
+++ b/views/admin/notes/new-notes.ejs
@@ -10,6 +10,7 @@
     subject:'',
     semester:'',
     description:'',
-}}) %>
+},pdfRequired:true
+}) %>
     </main>  
 <%- include ('../../shared/includes/footer') %>
